--- a/arandano.html
+++ b/arandano.html
@@ -57,7 +57,7 @@
     </article>     
 
 </main>
-<a href="frutas.html">
+<a href="index.html">
         <button class="b1">Regresar</button>
     </a>
 <footer>
