--- a/sandia.html
+++ b/sandia.html
@@ -53,7 +53,7 @@
     </article>     
 
 </main>
-<a href="frutas.html">
+<a href="index.html">
         <button class="b1">Regresar</button>
     </a>
 <footer>
