--- a/uvas.html
+++ b/uvas.html
@@ -56,7 +56,7 @@
     </article>     
 
 </main>
-<a href="frutas.html">
+<a href="index.html">
         <button class="b1">Regresar</button>
     </a>
 <footer>
